<resources>
    <string name="debug_start_params">启用动态参数</string>
    <string name="debug_pre_show_ad">提前显示广告(无需两天后)</string>
    <string name="debug_reset_book_shelf">重置获取默认书架</string>
    <string name="debug_update_chapter">更新章节</string>
    <string name="debug_show_toast">打点Toast</string>
    <string name="debug_api_host">智能API接口:</string>
    <string name="debug_web_host">WebView接口:</string>
    <string name="debug_micro_host">微服务API接口:</string>
    <string name="debug_micro_content_host">微服务内容接口:</string>
    <string name="debug_input_host">https://</string>
    <string name="choice_host">host选择</string>
    <string name="debug_mode">调试模式</string>
    <string name="save">保存</string>
    <string name="icon">图片</string>
    <string name="setting_offline_download_config_key">offline_download_config_key</string>
    <string name="setting_offline_download_updateapk_key">offline_download_updateapk_key</string>
    <string name="setting_offline_download_advise_key">offline_download_advise_key</string>
    <string name="setting_offline_download_about_key">offline_download_about_key</string>
    <string name="setting_offline_useguide_key">offline_useguide_key</string>
    <string name="setting_offline_download_select_all_key">offline_download_select_all_key</string>
    <string name="setting_offline_sns_bind">offline_sns_bind</string>
    <string name="setting_share_client">setting_share_client</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="push">推送</string>
    <string name="check_update">当前版本</string>
    <string name="market_go">去评分</string>
    <string name="about">关于</string>
    <string name="slogan">全本小说免费看</string>
    <string name="book_update_push_subtitle">更新推送</string>
    <string name="book_update_push">书籍更新</string>
    <string name="umeng_push_subtitle">消息推送</string>
    <string name="umeng_push">消息通知</string>
    <string name="push_voice_subtitle">推送设置</string>
    <string name="push_voice">推送声音</string>
    <string name="push_time_dialog_title">时间设置</string>
    <string name="push_time_dialog_confirm">设置</string>
    <string name="push_time_dialog_cancel">取消</string>
    <string name="origin_text">原网页</string>
    <string name="trans_coding_text">转码声明</string>
    <string name="welfare_center">福利中心</string>
    <string name="db_upgrade_hasnet">正在进入应用，马上就好（%1$d%%）</string>
    <string name="db_upgrade_nonet">正在优化应用，马上就好（%1$d%%）</string>
    <string name="search_title_text">输入书名、作者或关键词</string>
    <string name="publish_confirm_hint">提示</string>
    <string name="publish_leave_detail">离开将丢失已输入的内容,您是否确定要离开?</string>
    <string name="title_book_cover">书籍封面</string>
    <string name="book_no_data_tips">书架空空如也~去书城看看吧</string>
    <string name="determine_delete_book">删除书籍，确定要继续吗？</string>
    <string name="determine_clear_book">保留书籍仅清除缓存</string>
    <string name="switch_on"/>
    <string name="switch_off"/>
    <string name="action_settings">Settings</string>
    <string name="title_activity_act_book_cover">ActBookCover</string>
    <string name="title_activity_act_book_over">ActBookOver</string>
    <string name="net_error">网络异常，请检查网络</string>
    <string name="catalog_positive">正序</string>
    <string name="catalog_negative">倒序</string>
    <string name="bookmark_start">在阅读时点击  “</string>
    <string name="bookmark_end">”  按钮添加书签</string>
    <string name="read_setting">阅读页设置</string>
    <string name="push_setting">推送设置</string>
    <string name="push_sound">推送声音</string>
    <string name="determine_clear_all_file_cache">确定清除包括下载书籍在内的所有 \n 缓存吗？</string>
    <string name="book_cover_source">来源：</string>
    <string name="book_cover_no_source">暂无来源</string>
    <string name="book_cover_last_chapter">最新章节：</string>
    <string name="book_cover_update_time">更新：</string>
    <string name="book_cover_reading">转码阅读</string>
    <string name="book_cover_introduction">内容简介</string>
    <string name="book_cover_no_description">无简介</string>
    <string name="book_cover_catalog">查看目录</string>
    <string name="book_cover_recommend">看过本书的人还看了</string>
    <string name="book_cover_author_recommend">作者的其他作品</string>
    <string name="book_cover_no_resource">暂时找不到此本书的资源</string>
    <string name="book_cover_state_writing">连载中</string>
    <string name="book_cover_state_written">已完结</string>
    <string name="state_writting">-连载中</string>
    <string name="state_written">-已完结</string>
    <string name="no_des">无简介</string>
    <string name="resource_text">来源：</string>
    <string name="resource_count">本书全部%d个来源</string>
    <string name="have_add">已在书架中！</string>
    <string name="succeed_add">成功添加到书架！</string>
    <string name="search_sub_success">成功添加到书架！</string>
    <string name="bookshelf_insert_success">成功添加到书架！</string>
    <string name="succeed_remove">成功从书架移除！</string>
    <string name="bookshelf_delete_success">成功从书架中移除！</string>
    <string name="search_sub_remove_success">成功从书架中移除！</string>
    <string name="book_cover_add_bookshelf">加入书架</string>
    <string name="book_cover_remove_bookshelf">移出书架</string>
    <string name="book_cover_havein_bookshelf">已在书架</string>
    <string name="read_catalog_error">抱歉，目录加载异常！</string>
    <string name="read_network_retry">设置</string>
    <string name="network_error_retry">刷新</string>
    <string name="over_chapter_count">共%d章</string>
    <string name="ask">询问</string>
    <string name="change_source_message">您确定要更换这本书籍来源吗？更换来源会删除您之前缓存的章节</string>
    <string name="change_source_p">确定</string>
    <string name="newest_chapter">最新章节</string>
    <string name="my_book_shelf">我的书架</string>
    <string name="failed_get_data">获取数据失败</string>
    <string name="chapter_sort">第%d章</string>
    <string name="no_net">网络不给力，请稍后重试</string>
    <string name="reading_cache_hint">已添加到缓存管理页面</string>
    <string name="reading_cache">缓存方式</string>
    <string name="reading_all_down">全部缓存</string>
    <string name="reading_current_down">从当前章缓存</string>
    <string name="err_book_cant_read">抱歉，本书原网站存在问题，无法阅读</string>
    <string name="change_source_tips">当前章节内容存在问题，已为您进行智能切源操作</string>
    <string name="jump_next_chapter">跳过此章</string>
    <string name="change_source_total">你选择的是切换全本来源，会删除当前来源的所有已有缓存章节!</string>
    <string name="download_done">缓存完成!</string>
    <string name="download_progress_text">"缓存中,请稍候,已缓存"</string>
    <string name="download_done_title">缓存完成</string>
    <string name="download_done_message">立即安装</string>
    <string name="download_done_p">安装</string>
    <string name="download_done_n">取消</string>
    <string name="already_cached">已缓存</string>
    <string name="chapter">章</string>
    <string name="novel_test_chapter_num">第一百</string>
    <string name="novel_previous_chapter">上一章</string>
    <string name="novel_next_chapter">下一章</string>
    <string name="novel_chapterloading_error">抱歉，目录加载异常！</string>
    <string name="novel_empty_text">可能是：</string>
    <string name="novel_data_exception">数据异常</string>
    <string name="novel_network_error">网络出现异常</string>
    <string name="novel_click_refresh">点击刷新，重新加载</string>
    <string name="novel_no_bookmark">还没有添加书签哦~</string>
    <string name="err_no_net">网络不给力，请稍后重试</string>
    <string name="last_chapter_tip">已到最后一章</string>
    <string name="state_downloading">正在缓存：</string>
    <string name="state_waitting">等待缓存：</string>
    <string name="state_paused">已暂停：</string>
    <string name="state_download_failed">缓存失败：</string>
    <string name="state_locked">锁定：</string>
    <string name="setting_push_sound">推送声音</string>
    <string name="main_nftmgr_id">小说离线缓存</string>
    <string name="main_update_no_new">您追看的小说暂无更新</string>
    <string name="main_refresh_net_error">网络不给力</string>
    <string name="mian_update_version_dialog_title">新版本:</string>
    <string name="main_notification_ticker">有新版本:</string>
    <string name="mian_more_toast_update_count">》更新了</string>
    <string name="mian_more_toast_update_count_last">章</string>
    <string name="mian_more_toast_update_count_more">》等</string>
    <string name="mian_more_toast_update_count_center">本，更新了</string>
    <string name="mian_delete_cache_dialog_title">提示</string>
    <string name="mian_delete_cache_dialog_message">当前选中内容已缓存，删除后内容将被清空. 是否要继续？</string>
    <string name="mian_delete_cache_dialog_positive">是</string>
    <string name="mian_delete_cache_dialog_negative">否</string>
    <string name="mian_delete_cache_no_choose">您还没有选择书籍</string>
    <string name="mian_bookshelf_empty_hint">添加您喜欢的小说</string>
    <string name="is_first_chapter">当前已经是第一章</string>
    <string name="downloadservice_nofify_ticker">开始缓存《</string>
    <string name="download_pager_dialog_title">您确定要删除</string>
    <string name="download_pager_dialog_deletemessage">本小说缓存吗?</string>
    <string name="download_pager_dialog_deletemessage_first">》等</string>
    <string name="download_pager_dialog_deletemessage_after">》小说缓存吗?</string>
    <string name="updatenofiy_new_update">更新了</string>
    <string name="update_notify_zhang">章!</string>
    <string name="update_notify_and">等</string>
    <string name="update_book_count_new">本书更新了</string>
    <string name="no_resource">暂时找不到此本书的资源</string>
    <string name="menu_feedback">帮助与反馈</string>
    <string name="menu_no_market">未找到本地应用市场</string>
    <string name="app_update">更新</string>
    <string name="game_network_none">网络不给力，请检查网络连接</string>
    <string name="over_index_text1">你已经全部读完啦！\n接下来要不要看看其他有意思的...</string>
    <string name="over_index_text2">接下来要不要看看其他有意思的...</string>
    <string name="book_end_info"><Data><![CDATA[当前章节已全部看完，去看看其它是否有<font color="#ed5b47"><b>更新</b></font>吧!]]></Data></string>
    <string name="title_name_setting">设置</string>
    <string name="tv_push_time_tips_setting">分时间段推送</string>
    <string name="tv_push_time_default_setting">全天推送</string>
    <string name="basic_setting">基本设置</string>
    <string name="search_sorry_no_result">抱歉，暂无搜索结果</string>
    <string name="search_guess_favorite">也许你还喜欢这些</string>
    <string name="search_click_check_isright">请看看输入文字是否有误</string>
    <string name="book_last_chapter_nama_local_no">该书籍还未智能分章</string>
    <string name="auto_download_wifi">wifi下自动缓存</string>
    <string name="bookshelf_sort_sequence">书架排序</string>
    <string name="tv_sort_sequence_time">书架按阅读时间排序</string>
    <string name="tv_sort_update_time">书架按更新时间排序</string>
    <string name="book_item_text">&lt;font>未读%1$d&lt;/font>/%2$d</string>
    <string name="download_app_nofify_ticker">版本更新中</string>
    <string name="download_app_nofify_title">正在缓存...</string>
    <string name="download_app_nofify_finish_title">点击安装</string>
    <string name="download_app_nofify_finish_content">版本更新</string>
    <string name="download_app_nofify_ticker_error">版本更新失败</string>
    <string name="download_app_nofify_info_error">缓存出错</string>
    <string name="search_finish_book">全部书籍</string>
    <string name="search_finish_select_book">筛选完结</string>
    <string name="text_mine">我的</string>
    <string name="text_login">登录讨论区</string>
    <string name="text_detail_login">登录之后会发现更多精彩内容</string>
    <string name="bookshelf_community">讨论区</string>
    <string name="setting_reading_page">阅读页设置</string>
    <string name="tip_clear_cache">你确定要清除包括下载书籍在内的所有缓存吗？</string>
<string name="download_manage">缓存管理</string>
    <string name="bookshelf_manage">书架管理</string>
    <string name="notice_user_letter">致用户的一封信</string>
    <string name="notice_user_content"
            formatted="false">
        最近几个月，我们遭遇了众多问题，给您的使用造成了一定困扰，在这里，谢谢您的不离不弃。\n
        经过我们坚持不懈的努力寻求，全新的源：终于与大家见面，它有以下5大亮点：
    </string>
    <string name="notice_user_content1"> 更新速度超过99%应用</string>
    <string name="notice_user_content2"> 空章错章率降到最低</string>
    <string name="notice_user_content3"> 加载缓存更快，不卡顿</string>
    <string name="notice_user_content4"> 涵盖95%现有书籍，并且不断扩充中</string>
    <string name="notice_user_content5"> 不再抽风，长久稳定</string>
    <string name="notice_user_content6"> 再次感谢您的一路陪伴!</string>
    <string name="one_key_transfer">一键换源</string>
</resources>