<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/color_black_00000000"
        android:scrollbars="vertical">
    
    <LinearLayout
            android:layout_margin="@dimen/padding_8"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_white_f0f0f0">
        
        <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:text="@string/notice_user_letter"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/color_black_353535"
                    android:textSize="17sp"
                    android:layout_marginBottom="0dp"
                    android:layout_marginTop="0dp"
                    />
        </FrameLayout>
        
        <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/color_gray_d3d3d3"/>
        
        <LinearLayout
                android:paddingTop="@dimen/padding_8"
                android:paddingBottom="@dimen/padding_4"
                android:paddingLeft="@dimen/padding_16"
                android:paddingRight="@dimen/padding_16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            
            <TextView
                    android:textColor="@color/color_black_353535"
                    android:lineSpacingMultiplier="1.3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/notice_user_content"
                    android:textSize="14sp"/>
            
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                
                <TextView
                        android:text="快:"
                        android:lineSpacingMultiplier="1.5"
                        android:layout_marginTop="@dimen/dimen_padding_3"
                        android:textColor="@color/color_red_e0664e"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                
                <TextView
                        android:paddingLeft="4dp"
                        android:textColor="@color/color_black_353535"
                        android:lineSpacingMultiplier="1.5"
                        android:layout_marginTop="@dimen/dimen_padding_3"
                        android:text="@string/notice_user_content1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
            
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                
                <TextView
                        android:lineSpacingMultiplier="1.5"
                        android:layout_marginTop="@dimen/dimen_padding_3"
                        android:text="准:"
                        android:textColor="@color/color_red_e0664e"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                
                <TextView
                        android:paddingLeft="4dp"
                        android:textColor="@color/color_black_353535"
                        android:lineSpacingMultiplier="1.5"
                        android:layout_marginTop="@dimen/dimen_padding_3"
                        android:text="@string/notice_user_content2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
            
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                
                <TextView
                        android:text="好:"
                        android:lineSpacingMultiplier="1.5"
                        android:layout_marginTop="@dimen/dimen_padding_3"
                        android:textColor="@color/color_red_e0664e"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                
                <TextView
                        android:paddingLeft="4dp"
                        android:textColor="@color/color_black_353535"
                        android:lineSpacingMultiplier="1.5"
                        android:layout_marginTop="@dimen/dimen_padding_3"
                        android:text="@string/notice_user_content3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
            
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                
                <TextView
                        android:text="全:"
                        android:lineSpacingMultiplier="1.5"
                        android:layout_marginTop="@dimen/dimen_padding_3"
                        android:textColor="@color/color_red_e0664e"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                
                <TextView
                        android:paddingLeft="4dp"
                        android:textColor="@color/color_black_353535"
                        android:lineSpacingMultiplier="1.5"
                        android:layout_marginTop="@dimen/dimen_padding_3"
                        android:text="@string/notice_user_content4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
            
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                
                <TextView
                        android:text="稳:"
                        android:lineSpacingMultiplier="1.5"
                        android:layout_marginTop="@dimen/dimen_padding_3"
                        android:textColor="@color/color_red_e0664e"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                
                <TextView
                        android:paddingLeft="4dp"
                        android:textColor="@color/color_black_353535"
                        android:layout_marginTop="@dimen/dimen_padding_3"
                        android:text="@string/notice_user_content5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
            
            <TextView
                    android:layout_marginTop="@dimen/dimen_padding_3"
                    android:textColor="@color/color_black_353535"
                    android:text="@string/notice_user_content6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            
            <TextView
                    android:layout_marginLeft="@dimen/padding_16"
                    android:layout_marginRight="@dimen/padding_16"
                    android:layout_marginTop="@dimen/padding_12"
                    android:layout_marginBottom="@dimen/padding_4"
                    android:id="@+id/one_key_transfer"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:text="@string/one_key_transfer"
                    android:gravity="center"
                    android:textColor="@color/color_white"
                    android:textSize="17sp"
                    android:background="@drawable/bg_change_source"/>
        </LinearLayout>
    </LinearLayout>
    
    <ImageView
            android:id="@+id/iv_close"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_shelf_rest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

</RelativeLayout>
