<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="@dimen/dimen_width_180"
    android:layout_height="wrap_content"
    android:background="@drawable/icon_popup_window_bg">

    <TextView
        android:id="@+id/content_community"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_height_50"
        android:gravity="left|center_vertical"
        android:paddingLeft="@dimen/padding_18"
        android:drawableLeft="@drawable/icon_community"
        android:drawablePadding="@dimen/padding_20"
        android:text="@string/bookshelf_community"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_18" />

    <View
        android:layout_width="@dimen/dimen_width_180"
        android:layout_height="@dimen/dimen_height_0.5"
        android:background="@color/color_gray_4c4b4b"/>

    <TextView
        android:id="@+id/content_download_manage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_height_50"
        android:gravity="left|center_vertical"
        android:paddingLeft="@dimen/padding_18"
        android:drawableLeft="@drawable/icon_cache_manage"
        android:drawablePadding="@dimen/padding_20"
        android:text="@string/download_manage"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_18" />
    <View
        android:layout_width="@dimen/dimen_width_180"
        android:layout_height="@dimen/dimen_height_0.5"
        android:background="@color/color_gray_4c4b4b"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/content_bookshelf_manage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_height_50"
        android:gravity="left|center_vertical"
        android:paddingLeft="@dimen/padding_18"
        android:drawableLeft="@drawable/icon_bookshelf_manage"
        android:drawablePadding="@dimen/padding_20"
        android:text="@string/bookshelf_manage"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_18"
        android:visibility="gone"/>

    <View
        android:layout_width="@dimen/dimen_width_180"
        android:layout_height="@dimen/dimen_height_0.5"
        android:background="@color/color_gray_4c4b4b"
        android:visibility="gone"/>

</LinearLayout>